<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.repeater.img_recog.RecogImgActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/night"
    >
    <ImageView
    android:id="@+id/imageView1"
    android:layout_width="380dp"
    android:layout_height="240dp"
    android:contentDescription="@string/todo"
    android:scaleType="fitCenter"
    android:src="@mipmap/ic_me" />

    <Button
        android:id="@+id/recog_btn1"
        android:text="@string/selecimg1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_main_activity_button"
        />
    <Button
        android:id="@+id/recog_btn2"
        android:text="@string/selecimg2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_main_activity_button"
        />
    <Button
        android:id="@+id/process_btn"
        android:text="@string/deal"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_main_activity_button"
        android:layout_marginBottom="10dp"
        />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="380dp"
        android:layout_height="240dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_me"
        android:contentDescription="@string/todo" />
</LinearLayout>
