<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/heart"

    tools:context="com.example.repeater.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="220dp">

        <Button
            android:id="@+id/main_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_main_activity_button"
            android:text="@string/recogimg" />

        <Button
            android:id="@+id/main_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_main_activity_button"
            android:text="@string/test" />

        <Button
            android:id="@+id/main_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/selector_main_activity_button"
            android:text="@string/depository" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/myName"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"
        android:textColor="@color/colorName"/>
</FrameLayout>
