<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorClear30"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/mov" />
        <TextView
            android:id="@+id/desc"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical" />
        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="#4D9C27B0"
            />
        <TextView
            android:layout_weight="1"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/length"
            android:layout_width="match_parent" />
        <TextView
            android:id="@+id/length"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent" />
        <Button
            android:id="@+id/enter"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/selector_core_activity_button"
            android:text="@string/startRecord"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#4DAE10CA"
        />
</LinearLayout>
